使用spring security去权限管理

--- a/201712/src/main/resources/templates/editUserList.html
+++ b/201712/src/main/resources/templates/editUserList.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
 <head>
     <title>Demo</title>
 </head>
