--- a/201712/src/main/resources/templates/login.html
+++ b/201712/src/main/resources/templates/login.html
@@ -1,27 +1,19 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout">
-  <head>
-    <title>Log In</title>
-  </head>
-  <body>
-    <div layout:fragment="content">
-        <form name="f" th:action="@{/login}" method="post">
-	        <fieldset>
-	            <legend>Please Login</legend>
-                <div th:if="${param.error}" class="alert alert-error">
-                    Invalid username and password.
-                </div>
-                <div th:if="${param.logout}" class="alert alert-success">
-                    You have been logged out.
-                </div>
-	            <label for="username">Username</label>
-	            <input type="text" id="username" name="username"/>
-	            <label for="password">Password</label>
-	            <input type="password" id="password" name="password"/>
-	            <div class="form-actions">
-	                <button type="submit" class="btn">Log in</button>
-	            </div>
-	        </fieldset>
-	    </form>
-    </div>
-  </body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+    <title>Spring Security Example </title>
+</head>
+<body>
+<div th:if="${param.error}">
+    Invalid username and password.
+</div>
+<div th:if="${param.logout}">
+    You have been logged out.
+</div>
+<form th:action="@{/login}" method="post">
+    <div><label> Email : <input type="text" name="username"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><input type="submit" value="Sign In"/></div>
+</form>
+</body>
 </html>
