使用executorService 和completionService来完成异步线程池操作

--- a/201712/src/main/resources/templates/home.html
+++ b/201712/src/main/resources/templates/home.html
@@ -8,8 +8,8 @@
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
-<form th:action="@{/users}" method="get">
-    <input type="submit" value="Edit"/>
+<form th:action="@{/buy/users}" method="get">
+    <input type="submit" value="User Management"/>
 </form>
 </body>
 </html>
